# Image_Pipeline

./: .gitattributes  .gitignore  AutoExposure.cpp  BlackLevel.cpp  BlackLevel1.cpp  Blog.md  Debayering.cpp  Debayering.md  Dilation1.cpp  Display.py  GammaCorrection.cpp  LICENSE  Morphology.cpp  README.md  Readme.md  Scaling.cpp  read.cpp  read2_temp.cpp  test.cpp
Notes/: Debayering.md  Image_Pipeline_Procedure.md  Theory.md
include/: ColorSpace.h  Conversion.h  Edges.h  Gamma.h  MedianFilter.h  Morphology.h  WB.h  auto_exposure.h  auto_white_balance.h  black_level_correction.h  color_space_conversion.h  create_image.h  debayering.h  edges.h  filters.h  gamma.h  morphology.h  rotate.h
notes/: DEBAYERING.md  THEORY.md
rawimages/: Flash2.tiff
src/: CMakeLists.txt  ColorSpace.cpp  Conversion.cpp  CreateImage.cpp  Edges.cpp  Filters.cpp  Gamma.cpp  MedianFilter.cpp  Morphology.cpp  PixelData.txt  Read_image.py  WB.cpp  auto_exposure.cpp  auto_white_balance.cpp  black_level_correction.cpp  color_space_conversion.cpp  conversion.cpp  create_image.cpp  debayering.cpp  edges.cpp  filters.cpp  gamma.cpp  main.cpp  morphology.cpp  read_image.py  rotate.cpp
